# sample-ngx-linkfunc-project

./: README.md
linkfunc-jwt-auth/: CMakeLists.txt  README.md  SampleNginxConfig-aio-threads.conf  jwt-auth-nginx.conf
linkfunc-jwt-auth/resources/: app_config.json
linkfunc-jwt-auth/src/main/: app.cpp
ngx-cfunc-ggl-direction/: CMakeLists.txt  README.md  SampleNginxConfig.conf
ngx-cfunc-ggl-direction/resources/: app_config.json
ngx-cfunc-ggl-direction/src/main/: CfuncGglDirection.cpp
ngx-cfunc-ggl-direction/src/test/: CfuncGglDirectionTest.cpp
